# py-quick-cache

./: .gitignore  LICENSE  README.md  cache.py  eviction_policy.py  main.py  metrics.py  pyproject.toml  requirements.txt  serializer.py  todo.md  todo.txt
cache_data/: cache.pkl
docs/source/: pyquickcache.registry.rst  pyquickcache.rst
manual_test/: main.py  new_main.py
src/pyquickcache/: __init__.py  _bootstrap.py  base_cache.py  cache.py  config.py  decorators.py  exceptions.py  helpers.py  quick_cache.py  quick_cache_config.py
src/pyquickcache/backend/: _cache_entry.py  base.py  file.py  inmemory.py
src/pyquickcache/backend/mixins/: __init__.py  persistence.py
src/pyquickcache/eviction_policy/: __init__.py  base_eviction_policy.py  fifo.py  lfu.py  lru.py
src/pyquickcache/metrics/: __init__.py  base.py  cache_metrics.py  no_op.py
src/pyquickcache/registry/: decorators.py  default_registries.py  registry.py
src/pyquickcache/serializer/: __init__.py  base.py  json.py  pickle.py
src/pyquickcache/storage/: __init__.py  base.py  file_manager.py  filesystem.py
tests/: test_eviction_policies.py  test_registry.py  test_serializers.py
