[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquickcache"
version = "0.1.0"
description = "High-performance in-memory cache with TTL, eviction policies, metrics, and persistence"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Naman Malik" }
]
keywords = ["cache", "ttl", "lru", "metrics", "in-memory", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/itsjustnaman/py-quick-cache"
Source = "https://github.com/itsjustnaman/py-quick-cache"
Issues = "https://github.com/itsjustnaman/py-quick-cache/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
